# Core-War-Reimagined

./: .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260418000001_create_users_and_refresh_tokens.sql
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs  socket.rs
backend/src/models/: user.rs
backend/tests/: auth_integration.rs
engine/: Cargo.toml
engine/src/: instruction.rs  lib.rs  parser.rs  vm.rs  wasm.rs
engine/tests/: canonical_warriors.rs
engine/tests/warriors/: dwarf.red  imp.red  mice.red  mice_lite.red  scanner.red
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: test-backend.mjs
frontend/src/: App.tsx  AppLayout.tsx  index.css  main.tsx
frontend/src/core/: constants.ts  coreRenderer.ts  opcodeColors.test.ts  opcodeColors.ts  redcodeFormat.test.ts  redcodeFormat.ts
frontend/src/pages/: BattlefieldPage.tsx  BuilderPage.tsx  HomePage.tsx  LearnPage.tsx
frontend/src/pages/battlefield/: BattleControls.tsx  BattleStatus.tsx  BattlefieldPage.tsx  WarriorSelector.tsx  styles.ts  useBattle.ts
frontend/src/pages/builder/: BuilderPage.tsx  EditorStatus.tsx  EditorToolbar.tsx  WarriorListItem.tsx  WarriorListPanel.tsx  styles.ts  useBuilder.ts
frontend/src/redcode/: CheatSheetPanel.tsx  cheatSheet.test.ts  cheatSheet.ts  monaco.test.ts  monaco.ts
frontend/src/test/__mocks__/: core-war-engine.ts
frontend/src/warriors/: library.test.ts  library.ts
