[package]
name = "core-war-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
socketioxide = { version = "0.15", features = ["extensions"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
async-trait = "0.1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
